--- a/calculadoraimcmvc/src/main/resources/templates/calculadora.html
+++ b/calculadoraimcmvc/src/main/resources/templates/calculadora.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"/>
-    <link rel="stylesheet" th:href="@{/css/style.css}"/>
+    <link rel="stylesheet" th:href="@{../css/style.css}"/>
 </head>
 <body>
 <main role="main">
@@ -75,11 +75,11 @@
                             <td th:text="${result.getValor()}"></td>
                         </tr>
                     </th:block>
-                </tbody>
-            </table>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
-</div>
 </main>
 </body>
 </html>
